Add HDF5 dependency to neo_field

--- a/src/field/CMakeLists.txt
+++ b/src/field/CMakeLists.txt
@@ -12,6 +12,9 @@ add_library(neo_field STATIC
     mesh_2d.f90
     field.f90)
 
+target_link_libraries(neo_field PUBLIC
+    hdf5_tools
+)
 set_property(TARGET neo_field PROPERTY
     INTERFACE_INCLUDE_DIRECTORIES ${CMAKE_Fortran_MODULE_DIRECTORY})
 add_library(LIBNEO::field ALIAS neo_field)
