--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -80,6 +80,7 @@ add_subdirectory(src/hdf5_tools)
 add_subdirectory(src/polylag)
 add_subdirectory(src/interpolate)
 add_subdirectory(src/field)
+add_subdirectory(src/collisions)
 
 find_package(BLAS REQUIRED)
 find_package(LAPACK REQUIRED)
