--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -20,6 +20,11 @@ execute_process(COMMAND nf-config --flibs
 
 set (COMMON_LIBS ${MAIN_LIB} ${BLAS_LIBRARIES} ${LAPACK_LIBRARIES} ${NETCDF_LIBRARIES})
 
+add_executable(test_perp_coll_frequency.x collisions/test_perp_coll_frequency.f90)
+target_link_libraries(test_perp_coll_frequency.x
+  neo
+)
+
 add_executable(test_arnoldi.x source/test_arnoldi.f90)
 target_link_libraries(test_arnoldi.x
   ${COMMON_LIBS}
@@ -90,6 +95,7 @@ add_fortran_test(test_geqdsk_tools)
 add_fortran_test(test_hdf5_tools)
 add_fortran_test(test_util)
 add_fortran_test(test_interpolate)
+add_fortran_test(test_perp_coll_frequency)
 
 ## Custom tests
 
