--- a/src/collisions/CMakeLists.txt
+++ b/src/collisions/CMakeLists.txt
@@ -1,7 +1,7 @@
-add_library(collisions STATIC
-    perp_coll_frequency.f90)
+add_library(collision_freqs STATIC
+    collision_freqs.f90)
 
-set_property(TARGET collisions PROPERTY
+set_property(TARGET collision_freqs PROPERTY
     INTERFACE_INCLUDE_DIRECTORIES ${CMAKE_Fortran_MODULE_DIRECTORY})
-add_library(LIBNEO::collisions ALIAS collisions)
+add_library(LIBNEO::collision_freqs ALIAS collision_freqs)
 
