Add test of coulomb log

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -24,6 +24,7 @@ add_executable(test_collision_freqs.x collisions/test_collision_freqs.f90)
 target_link_libraries(test_collision_freqs.x
   neo
   collision_freqs
+  util_for_test
 )
 
 add_executable(test_arnoldi.x source/test_arnoldi.f90)
