Fix build on Github

--- a/src/collisions/CMakeLists.txt
+++ b/src/collisions/CMakeLists.txt
@@ -36,6 +36,9 @@ add_library(collision_freqs STATIC
 
 set_property(TARGET collision_freqs PROPERTY
     INTERFACE_INCLUDE_DIRECTORIES ${CMAKE_Fortran_MODULE_DIRECTORY})
+
 add_library(LIBNEO::collision_freqs ALIAS collision_freqs)
+
 target_link_libraries(collision_freqs PUBLIC fortran_stdlib::fortran_stdlib)
 target_include_directories(collision_freqs PUBLIC ${FORTRAN_STDLIB_INCLUDE_DIR})
+target_link_libraries(collision_freqs PUBLIC neo)
