Fix build when fypp is missing

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -127,6 +127,15 @@ if (NOT Python_FOUND)
     return()
 endif()
 
+# detect virtualenv and set Pip args accordingly
+if(DEFINED ENV{VIRTUAL_ENV} OR DEFINED ENV{CONDA_PREFIX})
+  set(_pip_args)
+else()
+  set(_pip_args "--user")
+endif()
+# install fypp which is required for fortran stdlib
+execute_process(COMMAND ${Python_EXECUTABLE} -m pip install ${_pip_args} fypp)
+
 # F2PY headers
 execute_process(
     COMMAND "${Python_EXECUTABLE}"
