--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -128,11 +128,12 @@ if (NOT Python_FOUND)
 endif()
 
 # detect virtualenv and set Pip args accordingly
-#if(DEFINED ENV{VIRTUAL_ENV} OR DEFINED ENV{CONDA_PREFIX})
-#  set(_pip_args)
-#else()
-set(_pip_args "--user")
-#endif()
+if(DEFINED ENV{VIRTUAL_ENV} OR DEFINED ENV{CONDA_PREFIX})
+    set(_pip_args)
+else()
+    set(_pip_args "--user")
+endif()
+
 # install fypp which is required for fortran stdlib
 execute_process(COMMAND ${Python_EXECUTABLE} -m pip install ${_pip_args} fypp)
 message(STATUS "${Python_EXECUTABLE} -m pip install ${_pip_args} fypp")
