--- a/src/collisions/CMakeLists.txt
+++ b/src/collisions/CMakeLists.txt
@@ -16,7 +16,7 @@ if (NOT fortran_stdlib_FOUND)
         fortran_stdlib
         GIT_REPOSITORY https://github.com/fortran-lang/stdlib.git
         PREFIX ${prefix}
-        SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/external/fortran_stdlib
+        SOURCE_DIR ${prefix}/source
         CMAKE_ARGS -DBUILD_TESTING="off"
         BUILD_COMMAND ${CMAKE_COMMAND} --build <BINARY_DIR> #--target fortran_stdlib/install
         INSTALL_COMMAND ""
@@ -34,10 +34,13 @@ endif()
 add_library(collision_freqs STATIC
     collision_freqs.f90)
 
+
 set_property(TARGET collision_freqs PROPERTY
     INTERFACE_INCLUDE_DIRECTORIES ${CMAKE_Fortran_MODULE_DIRECTORY})
 
 add_library(LIBNEO::collision_freqs ALIAS collision_freqs)
+
+add_dependencies(collision_freqs fortran_stdlib)
 
 target_link_libraries(collision_freqs PUBLIC fortran_stdlib::fortran_stdlib)
 target_include_directories(collision_freqs PUBLIC ${FORTRAN_STDLIB_INCLUDE_DIR})
