--- a/src/transport/CMakeLists.txt
+++ b/src/transport/CMakeLists.txt
@@ -8,6 +8,7 @@ set_property(TARGET transport PROPERTY
 add_library(LIBNEO::transport ALIAS transport)
 
 add_dependencies(transport collision_freqs)
+add_dependencies(transport species)
 
-target_link_libraries(transport PUBLIC collision_freqs)
+target_link_libraries(transport PUBLIC collision_freqs species)
 
