Implement D one over nu 11 e

--- a/src/species/CMakeLists.txt
+++ b/src/species/CMakeLists.txt
@@ -6,3 +6,4 @@ set_property(TARGET species PROPERTY
     INTERFACE_INCLUDE_DIRECTORIES ${CMAKE_Fortran_MODULE_DIRECTORY})
 
 add_library(LIBNEO::species ALIAS species)
+add_dependencies(species neo)
