--- a/src/collisions/CMakeLists.txt
+++ b/src/collisions/CMakeLists.txt
@@ -44,9 +44,11 @@ set_property(TARGET collision_freqs PROPERTY
     INTERFACE_INCLUDE_DIRECTORIES ${CMAKE_Fortran_MODULE_DIRECTORY})
 
 add_library(LIBNEO::collision_freqs ALIAS collision_freqs)
+add_dependencies(collision_freqs species)
 
 target_link_libraries(collision_freqs PUBLIC fortran_stdlib::fortran_stdlib)
 target_include_directories(collision_freqs PUBLIC ${FORTRAN_STDLIB_INCLUDE_DIR})
-target_link_libraries(collision_freqs PUBLIC neo)
+target_link_libraries(collision_freqs PUBLIC neo
+                                            species)
+target_link_directories(collision_freqs PUBLIC species)
 
-add_dependencies(collision_freqs species)
