Fix Fortran stdlib bug

--- a/src/collisions/CMakeLists.txt
+++ b/src/collisions/CMakeLists.txt
@@ -8,8 +8,8 @@ if (NOT fortran_stdlib_FOUND)
     include(ExternalProject)
 
     set(prefix "${CMAKE_BINARY_DIR}/fortran_stdlib")
-    set(FORTRAN_STDLIB_LIBRARY ${prefix}/install/lib/libfortran_stdlib.a)
-    set(FORTRAN_STDLIB_INCLUDE_DIR ${prefix}/install/include/fortran_stdlib/GNU-12.2.0/)
+    set(FORTRAN_STDLIB_LIBRARY ${prefix}/src/fortran_stdlib-build/src/libfortran_stdlib.a)
+    set(FORTRAN_STDLIB_INCLUDE_DIR ${prefix}/src/fortran_stdlib-build/src/mod_files)
 
     execute_process(
     COMMAND ${CMAKE_COMMAND} -E make_directory ${FORTRAN_STDLIB_INCLUDE_DIR}
@@ -23,7 +23,7 @@ if (NOT fortran_stdlib_FOUND)
         CMAKE_ARGS -DBUILD_TESTING="off"
 			-DCMAKE_INSTALL_PREFIX=${CMAKE_BINARY_DIR}/fortran_stdlib/install
         BUILD_COMMAND ${CMAKE_COMMAND} --build <BINARY_DIR> #--target fortran_stdlib/install
-        #INSTALL_COMMAND ""
+        INSTALL_COMMAND ""
         BUILD_BYPRODUCTS ${FORTRAN_STDLIB_LIBRARY}
             ${FORTRAN_STDLIB_INCLUDE_DIR}
     )
@@ -51,4 +51,3 @@ target_include_directories(collision_freqs PUBLIC ${FORTRAN_STDLIB_INCLUDE_DIR})
 target_link_libraries(collision_freqs PUBLIC neo
                                             species)
 target_link_directories(collision_freqs PUBLIC species)
-
