--- a/fpm.toml
+++ b/fpm.toml
@@ -6,7 +6,7 @@ maintainer = "albert@tugraz.at"
 copyright = "Copyright 2025, Plasma Physics at TU Graz"
 
 [build]
-external-modules = ["netcdf", "mpi", "hdf5", "h5lt"]
+external-modules = ["netcdf", "mpi", "hdf5", "h5lt", "fftw3.f03"]
 link = ["netcdf", "netcdff", "hdf5", "hdf5_hl", "hdf5_fortran", "hdf5hl_fortran"]
 auto-executables = true
 auto-tests = true
