--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -74,8 +74,6 @@ link_directories(${NETCDFLIB_DIR})
 add_link_options(${NETCDF_FLIBS})
 
 # Libraries that libneo depends on
-add_subdirectory(src/MyMPILib)
-add_subdirectory(src/hdf5_tools)
 add_subdirectory(src/polylag)
 add_subdirectory(src/interpolate)
 add_subdirectory(src/field)
@@ -91,6 +89,8 @@ include(CMakeSources.in)
 
 # Libraries that depend on libneo
 add_subdirectory(src/magfie)
+add_subdirectory(extra/MyMPILib)
+add_subdirectory(extra/hdf5_tools)
 
 add_subdirectory(test)
 
