--- a/extra/hdf5_tools/CMakeLists.txt
+++ b/extra/hdf5_tools/CMakeLists.txt
@@ -16,7 +16,7 @@ endif ()
 find_package(HDF5 COMPONENTS C HL Fortran Fortran_HL REQUIRED)
 
 add_library(hdf5_tools STATIC
-  hdf5_tools.f90
+  hdf5_tools.F90
   hdf5_tools_f2003.f90
 )
 target_link_libraries(hdf5_tools PRIVATE
