--- a/src/magfie/CMakeLists.txt
+++ b/src/magfie/CMakeLists.txt
@@ -15,7 +15,7 @@ add_library(magfie STATIC
     spline5_RZ.f90
     field_mesh3d.f90
     magfield_mod.f90
-    polylag_3.f
+    polylag_3.f90
     magfie_cyl.f90
     geqdsk_tools.f90
     coil_tools.f90
