hotfix: add dependency of field on interpolate

--- a/src/field/CMakeLists.txt
+++ b/src/field/CMakeLists.txt
@@ -14,6 +14,7 @@ add_library(neo_field STATIC
 
 target_link_libraries(neo_field PRIVATE
     hdf5_tools
+    interpolate
 )
 set_property(TARGET neo_field PROPERTY
     INTERFACE_INCLUDE_DIRECTORIES ${CMAKE_Fortran_MODULE_DIRECTORY})
