--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,7 +32,8 @@ if(${CMAKE_Fortran_COMPILER_ID} STREQUAL "GNU")
 
   set (CMAKE_Fortran_FLAGS "-cpp -g -Og -fPIC -fcheck=all -fbacktrace \
                             -fno-realloc-lhs -fopenmp -Wall -Wextra -Werror \
-                            -Wno-unused-function -fmax-errors=1")
+                            -Wno-unused-function -Wno-external-argument-mismatch \
+                            -fmax-errors=1")
 
   # https://github.com/numpy/numpy/issues/25777
   set (CMAKE_C_FLAGS "-Wno-error=incompatible-pointer-types")
