test: add comprehensive Biot-Savart Fourier tests with convergence validation
- Implement test_coil_tools_biot_savart with 29 test functions
- Add Fourier mode convergence test (16/32/64 modes)
- Create helper functions for circular, straight wire, and helical coils
- Cross-validate Fourier vs direct methods with <1% numerical error
- Include physics validation for axisymmetric field properties
- Add CMake integration for automated test execution

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -150,6 +150,7 @@ set_tests_properties(test_system_utility PROPERTIES  FAIL_REGULAR_EXPRESSION "WA
 add_subdirectory(util_for_test)
 add_subdirectory(util_for_test_field)
 add_subdirectory(field)
+add_subdirectory(magfie)
 add_subdirectory(polylag)
 add_subdirectory(poincare)
 add_subdirectory(odeint)
