--- a/tools/h5merge/CMakeLists.txt
+++ b/tools/h5merge/CMakeLists.txt
@@ -1,6 +1,23 @@
 ### Basic settings
 cmake_minimum_required(VERSION 3.18)
 
+if(APPLE AND NOT DEFINED HDF5_DIR)
+  # locate brew
+  find_program(BREW_EXECUTABLE brew HINTS /opt/homebrew/bin /usr/local/bin)
+  if(BREW_EXECUTABLE)
+    execute_process(
+      COMMAND "${BREW_EXECUTABLE}" --prefix hdf5
+      OUTPUT_VARIABLE _hdf5_prefix
+      OUTPUT_STRIP_TRAILING_WHITESPACE
+      RESULT_VARIABLE _hdf5_res
+    )
+    if(_hdf5_res EQUAL 0 AND EXISTS "${_hdf5_prefix}/lib/cmake/hdf5")
+      set(HDF5_DIR "${_hdf5_prefix}/lib/cmake/hdf5" CACHE PATH "Path to HDF5Config.cmake")
+      message(STATUS "HDF5_DIR set to ${HDF5_DIR}")
+    endif()
+  endif()
+endif()
+
 set(CMAKE_DISABLE_IN_SOURCE_BUILD ON)
 
 ### Define the project
