--- a/src/efit_to_boozer/CMakeLists.txt
+++ b/src/efit_to_boozer/CMakeLists.txt
@@ -21,7 +21,7 @@ enable_testing()
 if(${CMAKE_Fortran_COMPILER_ID} STREQUAL "GNU")
 
   set (CMAKE_Fortran_FLAGS "-cpp -g -Og -fcheck=all -fbacktrace \
-                            -fno-realloc-lhs -fopenmp -Wall -Wextra")
+                            -fno-realloc-lhs -Wall -Wextra")
 
   # https://github.com/numpy/numpy/issues/25777
   set (CMAKE_C_FLAGS "-Wno-error=incompatible-pointer-types")
